# jobcant

./: .gitignore  README.md  pyproject.toml  setup.cfg
jobcant/: cli.py  config.py  duration.py  jobcan.py  plotting.py
