[metadata]
name = Jobcant
version = attr: jobcant.__version__
author = Jean-Loup Roussel-Clouet
author_email = jean-loup@cryptact.com
description = Does some of the things Jobcan doesn't
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maerig/jobcant
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    beautifulsoup4==4.11.1
    plotly==5.10.0
    requests==2.28.1
python_requires = >=3.10

[options.entry_points]
console_scripts =
    jobcant = jobcant.cli:main

[options.extras_require]
dev =
    build==0.8.0
    twine==4.0.1

[options.packages.find]
include =
    jobcant